<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mazewallpapers"
    android:noHistory="true"
    tools:context="edu.wm.cs301.jeremyelkayam.gui.AMazeActivity">

    <SeekBar
        android:id="@+id/difficultySlider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="285dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="15"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <Spinner
        android:id="@+id/generation_spinner"
        android:layout_width="131dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/generationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/generation_algorithm"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/generation_spinner"
        app:layout_constraintEnd_toEndOf="@+id/generation_spinner"
        app:layout_constraintStart_toStartOf="@+id/generation_spinner"
        app:layout_constraintTop_toBottomOf="@+id/difficultySlider"
        app:layout_constraintVertical_bias="0.692"/>

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/difficultySlider"
        app:layout_constraintEnd_toEndOf="@+id/difficultySlider"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/difficultySlider"
        app:layout_constraintTop_toBottomOf="@+id/Welcome"
        app:layout_constraintVertical_bias="0.57" />

    <Spinner
        android:id="@+id/driver_spinner"
        android:layout_width="131dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/generation_spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/driverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/driver"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/driver_spinner"
        app:layout_constraintEnd_toEndOf="@+id/driver_spinner"
        app:layout_constraintStart_toStartOf="@+id/driver_spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"/>

    <Button
        android:id="@+id/newMaze"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:onClick="toLoadScreen"
        android:text="@string/newmazetext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/difficultytext"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/difficultyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <CheckBox
        android:id="@+id/loadFile"
        android:layout_width="306dp"
        android:layout_height="91dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:color="@color/colorAccent"
        android:text="@string/checkbox_text"
        app:layout_constraintBottom_toTopOf="@+id/newMaze"
        app:layout_constraintEnd_toStartOf="@+id/driver_spinner"
        app:layout_constraintStart_toEndOf="@+id/generation_spinner"
        app:layout_constraintTop_toBottomOf="@+id/difficultySlider"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="322dp"
        android:layout_height="111dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:shadowColor="@color/colorShadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="Welcome to the maze game!"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
